--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,9 @@
     @apply bg-background text-foreground;
   }
 }
+
+.ag-root-wrapper  {
+  --ag-header-column-separator-display: none;
+  --ag-borders: none;
+  border-radius: 5px
+}
